Delete implemented, yet to test (#10)
